--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,6 @@ layout: compress
     <nav>
         <ul>
             <li><a href="{{site.baseurl}}/">Home</a></li>
-            <li><a href="{{site.baseurl}}/about">About</a></li>
-            <li><a href="{{site.baseurl}}/contact">Contact</a></li>
         </ul>
     </nav>
     <a class="title-a" href="{{site.baseurl}}/"><h1 class="title">{{site.title}}</h1></a>
@@ -28,8 +26,7 @@ layout: compress
 
 <footer>
     <p><small>Copyrights &copy; {{site.time | date: '%Y'}} {{site.title}}</small></p>
-    <p><small>&nbsp;&#124;&nbsp;Built with <span>❤</span> by <a href="http://webjeda.com">webjeda</a></small></p>
+    <p><small>&nbsp;&#124;&nbsp;Built with <span>❤</span> by jamespan</small></p>
 </footer>
-{% include analytics.html %}
 </body>
 </html>
