--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,7 @@
 ---
 
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
+@import url('https://fonts.lug.ustc.edu.cn/css?family=Source+Code+Pro');
 
 $base-ff:         'Source Code Pro', "Courier New", Courier, monospace;
 $base-fs:          17px;
