--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,7 @@
 ---
 
 @charset "utf-8";
-@import url('https://fonts.lug.ustc.edu.cn/css?family=Source+Code+Pro');
+@import url('https://fonts.loli.net/css?family=Source+Code+Pro');
 
 $base-ff:         'Source Code Pro', "Courier New", Courier, monospace;
 $base-fs:          17px;
@@ -36,13 +36,6 @@ $on-laptop:        800px;
 
 
 
-// Use media queries like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
 @mixin media-query($device) {
     @media screen and (max-width: $device) {
         @content;
