--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,17 @@ layout: compress
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ page.title }} - {{site.title}}</title>
-  <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
+<!--   <link rel="stylesheet" href="{{site.baseurl}}/css/main.css"> -->
+{% capture styles %}
+{% include styles.css %}
+{% endcapture %}
+
+  <style>
+  {{ styles | scssify }}
+  </style>
 </head>
+  
+
 
 <body>
 <header>
