--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@ layout: compress
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ page.title }} - {{site.title}}</title>
-  {% capture styles %}{% include_relative ../css/main.scss %}{% endcapture %}
+  {% capture styles %}{% include_relative css/main.scss %}{% endcapture %}
 
   <style>
   @charset "UTF-8";
