--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@ layout: compress
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{ page.title }} - {{site.title}}</title>
+  <title>{% if page.url == "/" %}{{site.title}}{% else %}{{ page.title }} - {{site.title}}{% endif %}</title>
   {% capture styles %}{% include style.css %}{% endcapture %}
 
   <style>
