--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,4 +3,11 @@ layout: default
 ---
 
 <h1>{{page.title}}</h1>
+
+<span>[
+  {% for tag in page.tags %}
+    <a href="/tag/{{ tag }}"><code><nobr>#{{ tag }}</nobr></code>&nbsp;</a>
+  {% endfor %}
+]</span>
+
 {{content}}
