--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,10 @@ layout: default
 
 <h1>{{page.title}}</h1>
 
-<span>[
+<span>
   {% for tag in page.tags %}
-    <a href="/tag/{{ tag }}"><code><nobr>#{{ tag }}</nobr></code>&nbsp;</a>
+    <a href="/tag/{{ tag }}">#{{ tag }}</a>
   {% endfor %}
-]</span>
+</span>
 
 {{content}}
