--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,7 @@ layout: compress
 
 
 <footer>
-    <p><small>Copyrights &copy; {{site.time | date: '%Y'}} {{site.title}}</small></p>
-    <p><small>&nbsp;&#124;&nbsp;Built with <span>❤</span> by jamespan</small></p>
+    <p><small>Copyrights &copy; {{site.time | date: '%Y'}} {{site.title}}</small><small>&nbsp;&#124;&nbsp;Built with <span>❤</span> by jamespan</small></p>
 </footer>
 </body>
 </html>
