--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,11 @@ layout: default
 
 <h1>{{page.title}}</h1>
 
-<span>
+<span>{{ page.date | date_to_string }}</span>
+{% if page.tags %} | 
   {% for tag in page.tags %}
-    <a href="/tag/{{ tag }}">#{{ tag }}</a>
+    <a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag | slugify }}">#{{ tag }}</a>
   {% endfor %}
-</span>
+{% endif %}
 
 {{content}}
