--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,10 @@ layout: compress
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="referrer" content="no-referrer">
   <title>{% if page.url == "/" %}{{site.title}}{% else %}{{ page.title }} - {{site.title}}{% endif %}</title>
   {% capture styles %}{% include style.css %}{% endcapture %}
-
+  
   <style>
   @charset "UTF-8";
   {{ styles | scssify }}
