--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -9,9 +9,9 @@
 <ul class="image-gallery">
     {% for file in include.images %}
         {% assign filenameparts = file.path | split: "/" %}
-        {% assign filename = filenameparts | last | replace: file.extname,"" %}
+        {% assign filename = filenameparts | last | replace: file.extname,"" | replace: "market_pulse_", "" %}
         <li>
-            <a href="{{ file.path | relative_url }}" title="{{ filename }}"><img src="//images.weserv.nl/?url={{ site.url | replace: 'http://','' | replace: 'https://','' }}{{ file.path | relative_url }}&w=300&h=300&output=jpg&q=50&t=square" alt="{{ filename }}" title="{{ filename }}" /><span>{{ filename }}</span></a>
+            <a href="{{ file.path | relative_url }}" title="{{ filename }}"><img src="{{ file.path | relative_url }}" alt="{{ filename }}" title="{{ filename }}" /><span>{{ filename }}</span></a>
         </li>
     {% endfor %}
 </ul>
