--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -8,10 +8,10 @@
 
 <ul class="image-gallery">
     {% for file in include.images %}
-        {% assign filenameparts = file.path | split: "/" %}
-        {% assign filename = filenameparts | last | replace: file.extname,"" | replace: "market_pulse_", "" %}
+        {% assign filename = file.path | split: "/" | last | replace: file.extname, "" | replace: "market_pulse_", "" %}
+        {% assign url = file.path | relative_url %}
         <li>
-            <a href="{{ file.path | relative_url }}" title="{{ filename }}"><img src="{{ file.path | relative_url }}" alt="{{ filename }}" title="{{ filename }}" /><span>{{ filename }}</span></a>
+            <a href="{{ url }}" title="{{ filename }}"><img src="{{ url }}" alt="{{ filename }}" title="{{ filename }}" /><span>{{ filename }}</span></a>
         </li>
     {% endfor %}
 </ul>
