--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,8 @@ layout: compress
     <nav>
         <ul>
             <li><a href="{{site.baseurl}}/">Home</a></li>
-          <li><a href="{{site.baseurl}}/about">About</a></li>
+            <li><a href="{{site.baseurl}}/about">About</a></li>
+            <li><a href="{{site.baseurl}}/pulse">Market Pulse</a></li>
         </ul>
     </nav>
     <a class="title-a" href="{{site.baseurl}}/"><h1 class="title">{{site.title}}</h1></a>
