--- a/_includes/image-gallery.html
+++ b/_includes/image-gallery.html
@@ -1,15 +1,17 @@
 <style>
-    .image-gallery {overflow: auto; margin-left: -1%!important;}
+    .image-gallery {overflow: auto; display: flex; margin-left: -1%!important; flex-wrap: wrap; flex-direction: row; align-items: flex-end;}
     .image-gallery li {float: left; display: block; margin: 0 0 1% 1%; width: 19%;}
     .image-gallery li a {text-align: center; text-decoration: none!important; color: #777;}
     .image-gallery li a span {display: block; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; padding: 3px 0;}
     .image-gallery li a img {width: 100%; display: block;}
 </style>
 
-<ul class="gallery">
+<ul class="image-gallery">
     {% for file in include.images %}
         {% assign filename = file.path | split: "/" | last | replace: file.extname, "" | replace: "market_pulse_", "" %}
         {% assign url = file.path | relative_url %}
-        <img src="{{ url }}" alt="{{ filename }}" title="{{ filename }}" />
+        <li>
+            <a href="{{ url }}" title="{{ filename }}"><img src="{{ url }}" alt="{{ filename }}" title="{{ filename }}" /><span>{{ filename }}</span></a>
+        </li>
     {% endfor %}
 </ul>
