--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -3,3 +3,11 @@ layout: default
 ---
 
 {{content}}
+
+<script>
+(function() {
+    let pulse_img = document.querySelector('img[alt="Market Pulse"]');
+    pulse_img?.align="left";
+    pulse_img?.style.marginRight = "1rem";
+})();
+</script>
