--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -6,7 +6,7 @@ layout: default
 
 <script type="application/javascript">
 (function() {
-    let pulse_img = document.querySelector('img[alt="Market Pulse"]');
+    let pulse_img = document.querySelector('img');
     if (!pulse_img) return;
     pulse_img.align = "left";
     pulse_img.style.marginRight = "1rem";
