--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@ layout: compress
             <li><a href="{{site.baseurl}}/">Home</a></li>
             <li><a href="{{site.baseurl}}/about">About</a></li>
             <li><a href="{{site.baseurl}}/pulse">Market Pulse</a></li>
+            <li><a href="{{site.baseurl}}/stock-of-the-day">Stock Of the Day</a></li>
         </ul>
     </nav>
     <a class="title-a" href="{{site.baseurl}}/"><h1 class="title">{{site.title}}</h1></a>
