--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+{% if page.cover %}<img src="://{{page.cover}}"/>{% endif %}
+
 {{content}}
 
 <script type="application/javascript">
