--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% if page.cover %}<img src="://{{page.cover}}"/>{% endif %}
+{% if page.image %}<img src="{{ site.url }}{{ site.baseurl }}{{page.image}}"/>{% endif %}
 
 {{content}}
 
