--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,4 +3,7 @@ layout: default
 ---
 
 <h1>{{page.title}}</h1>
+
+{% if page.image %}<img src="{{ site.url }}{{ site.baseurl }}{{page.image}}"/>{% endif %}
+
 {{content}}
