--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+{% if page.author %}<h1>{{page.title}}</h1>{% endif %}
+
 {% if page.image %}<img src="{{ site.url }}{{ site.baseurl }}{{page.image}}"/>{% endif %}
 
 {{content}}
