--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,7 @@
 ---
 
 @charset "utf-8";
-@import url('https://fonts.loli.net/css?family=Source+Code+Pro');
+@import url('https://cdn.jsdelivr.net/npm/source-code-pro@2.38.0/source-code-pro.min.css');
 
 $base-ff:         'Source Code Pro', "Courier New", Courier, monospace;
 $base-fs:          17px;
