--- a/_includes/style.css
+++ b/_includes/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.loli.net/css?family=Source+Code+Pro");
+@import url("https://cdn.jsdelivr.net/npm/source-code-pro@2.38.0/source-code-pro.min.css");
 * {
 	box-sizing: border-box;
 	text-rendering: geometricPrecision
