--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@ layout: compress
         <ul>
             <li><a href="{{site.baseurl}}/">Home</a></li>
             <li><a href="{{site.baseurl}}/about">About</a></li>
-            <li><a href="{{site.baseurl}}/pulse/">Market Pulse</a></li>
+            <li><a href="{{site.baseurl}}/pulse">Market Pulse</a></li>
             <li><a href="{{site.baseurl}}/columns/stock-of-the-day/">Stock Of the Day</a></li>
             <li><a href="{{site.baseurl}}/columns/swing-trading/">Swing Trading</a></li>
         </ul>
