--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,4 +6,4 @@ layout: default
 
 {% if page.image %}<img src="{{ site.url }}{{ site.baseurl }}{{page.image}}"/>{% endif %}
 
-{{content}}
+{{ content | split: "<p><strong>YOU " | first }}
