--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@ layout: compress
             <li><a href="{{site.baseurl}}/pulse">Market Pulse</a></li>
             <li><a href="{{site.baseurl}}/columns/stock-of-the-day/">Stock Of the Day</a></li>
             <li><a href="{{site.baseurl}}/columns/swing-trading/">Swing Trading</a></li>
+            <li><a href="{{site.baseurl}}/columns/barrons-weekly/">Barrons Weekly</a></li>
         </ul>
     </nav>
     <a class="title-a" href="{{site.baseurl}}/"><h1 class="title">{{site.title}}</h1></a>
